@@ -1,3 +1,7 @@
+    * Application changes:
+        * Debian::Dependency: reworked to reduce calls to madison. Report available
+          versions when unnessary version issue is found.)
+
 2011-01-10 Dominique Dumont  <domi.dumont@free.fr> 1.230
 
     * Application changes:
